--- a/css/theme/stellar_black.css
+++ b/css/theme/stellar_black.css
@@ -21,7 +21,7 @@ body {
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 36px;
+  font-size: 30px;
   font-weight: normal;
   color: #fff; }
 
@@ -185,9 +185,11 @@ body {
 
 .reveal table th,
 .reveal table td {
+  background: #222;
   text-align: left;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
+  border: 1px solid;
+}
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
@@ -197,9 +199,9 @@ body {
 .reveal table td[align="right"] {
   text-align: right; }
 
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
-  border-bottom: none; }
+//.reveal table tbody tr:last-child th,
+//.reveal table tbody tr:last-child td {
+//  border-bottom: none; }
 
 .reveal sup {
   vertical-align: super; }
