--- a/css/theme/stellar_black.css
+++ b/css/theme/stellar_black.css
@@ -141,21 +141,21 @@ body {
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
 
-.reveal blockquote p:first-child,
-.reveal blockquote p:last-child {
-  display: inline-block; }
+//.reveal blockquote p:first-child,
+//.reveal blockquote p:last-child {
+//  display: inline-block; }
 
 .reveal q {
   font-style: italic; }
 
 .reveal pre {
   display: block;
+//  display: inline-block;
   position: relative;
 //  width: 80%;
 //  width: auto;
   margin: 20px auto;
   text-align: left;
-  display: inline-block;
   font-size: 0.55em;
   font-family: monospace;
   line-height: 1.2em;
