--- a/css/theme/stellar_black.css
+++ b/css/theme/stellar_black.css
@@ -156,21 +156,22 @@ body {
 //  width: auto;
   margin: 20px auto;
   text-align: left;
-  font-size: 0.55em;
   font-family: monospace;
-  line-height: 1.2em;
+//  line-height: 1.2em;
   word-wrap: break-word;
 //  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 }
 
 .reveal code {
   font-family: monospace;
+  font-size: 26px;
 }
 
 .reveal pre code {
   display: block;
 //  padding: 5px;
   overflow: auto;
+  font-size: 0.55em;
 //  max-height: 400px;
   word-wrap: normal;
 }
