Some updates from CppCon.

--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -23,7 +23,7 @@ based on dark.css by Ivan Sagalaev
 
 .hljs-operator {
 //  color: #00ffff;
-  color: #0066ff;
+  color: deepskyblue;
 }
 
 .hljs-template-tag {
